[gd_scene load_steps=2 format=3 uid="uid://bltx6h5khtbn0"]

[ext_resource type="Script" path="res://Singletons/Displaysetting.gd" id="1_ws6ni"]

[node name="Displaysetting" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ws6ni")

[node name="SettingsPopup" type="PopupPanel" parent="."]
initial_position = 1
size = Vector2i(230, 230)
visible = true

[node name="ResolutionOption" type="OptionButton" parent="SettingsPopup"]
offset_left = 4.0
offset_top = 4.0
offset_right = 226.0
offset_bottom = 226.0

[node name="StretchFactorOption" type="OptionButton" parent="SettingsPopup"]
offset_left = 4.0
offset_top = 4.0
offset_right = 226.0
offset_bottom = 226.0

[node name="StretchAspectOption" type="OptionButton" parent="SettingsPopup"]
offset_left = 4.0
offset_top = 4.0
offset_right = 226.0
offset_bottom = 226.0

[node name="ScaleFactorValue" type="LineEdit" parent="SettingsPopup"]
offset_left = 4.0
offset_top = 4.0
offset_right = 226.0
offset_bottom = 226.0

[node name="ScaleFactorSlider" type="HSlider" parent="SettingsPopup"]
offset_left = 4.0
offset_top = 4.0
offset_right = 226.0
offset_bottom = 226.0
